// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItems should not render Manage rules 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
    data-test-subj="Container"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="LinkedRulesMenuItems"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="LinkedRulesMenuEmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Linked to 1 rules
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="MenuActionsItems"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="MenuActionsButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuItems should not render linkedRules HeaderMenu component, instead should render a text 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
    data-test-subj="Container"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <span
        class="emotion-EuiTextColor"
        data-test-subj="noLinkedRules"
      >
        Linked to 0 rules
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        data-test-subj="LinkRulesButton"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Link rules
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="MenuActionsItems"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="MenuActionsButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuItems should render all menu actions enabled 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
    data-test-subj="Container"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <span
        class="emotion-EuiTextColor"
        data-test-subj="noLinkedRules"
      >
        Linked to 0 rules
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        data-test-subj="LinkRulesButton"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Link rules
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="MenuActionsItems"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="MenuActionsButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuItems should render delete action disabled when "canUserEditList" is "false" 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
    data-test-subj="Container"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="LinkedRulesMenuItems"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="LinkedRulesMenuEmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Linked to 1 rules
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="MenuActionsItems"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="MenuActionsButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuItems should render linkedRules, manageRules and menuActions 1`] = `
<div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-center-baseline-row"
    data-test-subj="Container"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="LinkedRulesMenuItems"
        >
          <button
            aria-label="Header menu Button Empty"
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
            data-test-subj="LinkedRulesMenuEmptyButton"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Linked to 1 rules
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
        data-test-subj="LinkRulesButton"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Link rules
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="MenuActionsItems"
        >
          <button
            aria-label="Header menu Button Icon"
            class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
            data-test-subj="MenuActionsButtonIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="boxesHorizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
